--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,38 +25,23 @@ img {
     height: 80%;
 }
 
-
-/* LOADER 1 */
 .loader {
-    height: 50px;
-    transform-origin: bottom center;
-    animation: rotate 3s linear infinite;
-  }
-  
-  .circle {
-    display: inline-block;
-    background-color: purple;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    transform: scale(0);
-    animation: grow 1.5s linear infinite;
-    margin: -10px;
-  }
-  
-  .circle:nth-child(2) {
-    background-color: palevioletred;
-    animation-delay: 0.75s;
-  }
-  
-  @keyframes rotate {
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  @keyframes grow {
-    50% {
-      transform: scale(1);
-    }
-  }
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid blue;
+  border-bottom: 16px solid blue;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
